<resources>
    <string name="app_name">FragReproduccionMusica</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_audio">Nombre del Audio</string>
    <string name="play">Reproducir</string>
    <string name="pause">Pausar</string>
    <string name="stop">Detener</string>
    <string name="select_audio">Selecciona una canción</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="audio_image">portada\n</string>
    <string name="TTPD">The Tortured Poets Department</string>


    <string-array name="audios_array">
        <item>I Can Do It With a Broken Heart</item>
        <item>imgonnagetyouback</item>
        <item>loml</item>
        <item>Fresh Out The Slammer</item>
        <item>My Boy Only Breaks His Favorite Toys</item>
    </string-array>
</resources>
