<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">


    <ImageView
        android:id="@+id/audioImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/audio_image"
        android:layout_marginBottom="16dp" />


    <TextView
        android:id="@+id/audioName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_audio"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play" />


    <Button
        android:id="@+id/buttonPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:layout_marginTop="8dp" />


    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_marginTop="8dp" />
</LinearLayout>
