<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/ttp2">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TTPD"
        android:textSize="40sp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/font1"
        android:gravity="center"/>

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_audio"
        android:textSize="22sp"
        android:layout_marginBottom="16dp"/>


    <Spinner
        android:id="@+id/spinnerAudio"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:entries="@array/audios_array" />


    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar"
        android:layout_marginTop="16dp" />


</LinearLayout>
